api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream-api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stream-api
  template:
    metadata:
      labels:
        app: stream-api
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: sql-sa
      containers:
      - name: stream-api-cnt
        image: aksacr1.azurecr.io/api-gateway:latest
        # volumeMounts:
        # - name: secrets-store-inline
        #   mountPath: /data
        
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
