api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stream-api-ing
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: api.puneetdevops.online
    http:
      paths:
      - pathType: Prefix
        path: "/" #ye app main bhi chiye
        backend:
          service:
            name: stream-api-svc
            port: 
              number: 8000
